fix: sonarlint issues